(v2) Remove some Java 9 related warnings.